# Sceneform-EQR

./: .gitignore  README.md  README_CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
Eq-Renderer/Android/eq-renderer/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules-clip.pro  proguard-rules.pro
Eq-Renderer/Android/eq-renderer/libs/: VersionInfo.txt
Eq-Renderer/Android/eq-renderer/src/main/: AndroidManifest.xml
Eq-Renderer/Android/eq-renderer/src/main/cpp/: CMakeLists.txt  CoordinateUtils.cpp  Core.cpp  Readme.md
Eq-Renderer/Android/eq-renderer/src/main/cpp/core/include/: CoordinateUtils.h  Core.h  PlyLoader.h
Eq-Renderer/Android/eq-renderer/src/main/cpp/core/src/: CoordinateUtils.cpp  Core.cpp  FilamentAssetsUtils.cpp  PlyGS3dLoader.cpp  PlyLoader.cpp  SorterNative.cpp
Eq-Renderer/Android/eq-renderer/src/main/cpp/filament-android/: CMakeLists.txt  Filament.cpp
Eq-Renderer/Android/eq-renderer/src/main/cpp/filament-android-native/include/gltfio/materials/: uberarchive.h
Eq-Renderer/Android/eq-renderer/src/main/cpp/filament-utils/: CMakeLists.txt  Utils.cpp
Eq-Renderer/Android/eq-renderer/src/main/cpp/gltfio-android/: CMakeLists.txt  MaterialKey.h
Eq-Renderer/Android/eq-renderer/src/main/cpp/include/: Core.h
Eq-Renderer/Android/eq-renderer/src/main/cpp/tinyply/: CMakeLists.txt  Readme.md  tinyply.h
ISSUE_TEMPLATE/: ISSUE_TEMPLATE_BUG.md
SampleProj/: .gitignore  build.gradle  settings.gradle
SampleProj/app/: build.gradle
SampleProj/app/src/main/: AndroidManifest.xml
SampleProj/app/src/main/assets/: sofa_ascii.ply
SampleProj/gradle/wrapper/: gradle-wrapper.properties
Tool/: genfilamat-mobile.bat
Tool/assets/ibl/lightroom_14b/: lightroom_14b_ibl.ktx  lightroom_14b_skybox.ktx  sh.txt
Tool/assets/mat/: camera_stream_base.mat  camera_stream_depth.mat  sceneform_gaussian_dot.mat  sceneform_gaussian_splat.mat  sceneform_gaussian_splat_alpha.mat  sceneform_ply_base_material.mat  sceneform_view_material.mat
doc/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
doc/javadoc/com/eqgis/ar/: ARAnchor.html  ARAugmentedImage.html  ARAugmentedImageDatabase.html  ARCamera.InitCallback.html  ARCamera.html  ARCameraConfig.html  ARCameraIntrinsics.html  ARConfig.DepthMode.html  ARConfig.FocusMode.html  ARConfig.PlaneFindingMode.html  ARConfig.UpdateMode.html  ARConfig.html  ARFrame.html  ARHitResult.html  ARImageMetadata.html  ARLightEstimate.State.html  ARLightEstimate.html  (+16 more)
doc/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-23.html  index-24.html  index-25.html  index-26.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
(+1628 files in other folders)
